one of first test commits

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-Here will be the readme for the project
+UltiComm (Ultimate Communications) also shortened to UC (pronounced as You-See) is an ambitious
+project of an online communications engine with a goal to kick out the obsolete forums technologies
+which still tend to reload the page every now-and-then and act like a page in the interface meaning.
+
+As an opposite to forums, UC will be a real web-app that doing the same task (discussions on
+specific topics) and perhaps a little more.
