russian readme update

--- a/README
+++ b/README
@@ -1,9 +1,43 @@
+Описание на русском языке ниже :)
+
 UltiComm (Ultimate Communications) also shortened to UC (pronounced as You-See) is an ambitious
 project of an online communications engine with a goal to kick out the obsolete forums technologies
 which still tend to reload the page every now-and-then and act like a page in the interface meaning.
 
 As an opposite to forums, UC will be a real web-app that doing the same task (discussions on
 specific topics) and perhaps a little more.
+
+
+UltiComm (Ultimate Communications, также UC, произносящееся как You See) - рабочее временное
+название веб-приложения для общения в интернете.
+
+Ключевой особенностью этого средства общения должен стать его интерфейс, легкий в обращении,
+полностью основанный на AJAX и являющийся полноценным веб-приложением, а не просто "страницей со
+ссылками". В то же время, мы будем стараться избегать отягощения прогаммы излишними украшениями и
+громозкими библиотеками, чтобы работа с ней была саксимально быстрой и минимально требовательной к
+ресурсам системы пользователя.
+
+Нишей для приложения мы на данный момент видим тематическое общение, то есть оно должно вытеснить в
+первую очередь форумы, которые на данный момент все еще остаются наборами "страниц со ссылками",
+перезагружающимися по любому поводу, с устаревшим подходом к интерфейсу, при котором его элементы
+разбросаны по довольно протяженной по вертикали области.
+
+Впрочем, уже сейчас, в ходе разработки прототипа, мы видим для этого проекта несколько большее
+будущее, чем только лишь замена форумам, так как его поведение позволяет считать приложение в
+равной степени и средством обмена мгновенными сообщениями (IM).
+
+Впрочем, уже сама задумка создания полноценной альтернативы форумам, основанной на более
+современных веб-технологиях является достаточно амбициозной, поэтому не будем забегать далеко вперед.
+
+Основными особенностями приложения должны стать:
+
+* Организация интерфейса, свойственная десктопным приложениям.
+
+* Автоматическое обновление потока сообщений без лишних действий со стороны пользователя.
+
+* Система ветвления сообщений не провоцирующая образования бесконечных ответвлений.
+
+* Система тегов, заменяющая жесткую иерархию разделов, усовершенствованная с целью придания тегам и тегированным сообщениям большей упорядоченности.
 
 
 Used resources:
