--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Описание на русском ниже :)
 
-UltiCom (Ultimate Communication) also shortened to UC (pronounced as You-See) is an ambitious
+UltiComm (Ultimate Communication) also shortened to UC (pronounced as You-See) is an ambitious
 project of an online communications engine with a goal to kick out the obsolete forums technologies
 which still tend to reload the page every now-and-then and act like a page in the interface meaning.
 
@@ -8,7 +8,7 @@ As an opposite to forums, UC will be a real web-app that doing the same task (di
 specific topics) and perhaps a little more.
 
 
-UltiCom (Ultimate Communication, также UC, произносящееся как You See) - рабочее временное
+UltiComm (Ultimate Communication, также UC, произносящееся как You See) - рабочее временное
 название веб-приложения для общения в интернете.
 
 Ключевой особенностью этого средства общения должен стать его интерфейс, легкий в обращении,
