--- a/README
+++ b/README
@@ -8,36 +8,30 @@ As an opposite to forums, UC will be a real web-app that doing the same task (di
 specific topics) and perhaps a little more.
 
 
-UltiComm (Ultimate Communication, также UC, произносящееся как You See) - рабочее временное
-название веб-приложения для общения в интернете.
+UltiComm (Ultimate Communication, также UC, произносящееся как You See) - рабочее название нового
+веб-приложения для общения в интернете, ключевыми особенностями которого должны стать:
 
-Ключевой особенностью этого средства общения должен стать его интерфейс, легкий в обращении,
-полностью основанный на AJAX и являющийся полноценным веб-приложением, а не просто "страницей со
-ссылками". В то же время, мы будем стараться избегать отягощения прогаммы излишними украшениями и
-громозкими библиотеками, чтобы работа с ней была саксимально быстрой и минимально требовательной к
-ресурсам системы пользователя.
+* Организация интерфейса, свойственная десктопным приложениям.
+* Автоматическое обновление без лишних действий со стороны пользователя.
+* Система ветвления сообщений не провоцирующая образования бесконечных ответвлений.
+* Система тегов, заменяющая жесткую иерархию разделов, усовершенствованная с целью придания тегам и
+  тегированным сообщениям большей упорядоченности.
 
-Нишей для приложения мы на данный момент видим тематическое общение, то есть оно должно вытеснить в
-первую очередь форумы, которые на данный момент все еще остаются наборами "страниц со ссылками",
-перезагружающимися по любому поводу, с устаревшим подходом к интерфейсу, при котором его элементы
-разбросаны по довольно протяженной по вертикали области.
+Ключевой особенностью UC должен стать его интерфейс, легкий в обращении, полностью основанный на
+AJAX и являющийся полноценным веб-приложением. В то же время, мы не будем отягощать программу излишними
+украшениями и громоздкими библиотеками, чтобы избежать подтормаживаний настолько, насколько это возможно.
 
-Впрочем, уже сейчас, в ходе разработки прототипа, мы видим для этого проекта несколько большее
-будущее, чем только лишь замена форумам, так как его поведение позволяет считать приложение в
+Программа пишется как замена в первую очередь форумам, то есть ресурсам для конструктивного
+тематического общения. На данный момент большинство форумов все еще остаются наборами "страниц со
+ссылками", перезагружающимися по любому поводу, с устаревшим подходом к интерфейсу.
+Кроме того, уже сейчас, в ходе разработки прототипа, его поведение позволяет считать приложение в
 равной степени и средством обмена мгновенными сообщениями (IM).
 
 Впрочем, уже сама задумка создания полноценной альтернативы форумам, основанной на более
 современных веб-технологиях является достаточно амбициозной, поэтому не будем забегать далеко вперед.
 
-Основными особенностями приложения должны стать:
-
-* Организация интерфейса, свойственная десктопным приложениям.
-
-* Автоматическое обновление потока сообщений без лишних действий со стороны пользователя.
-
-* Система ветвления сообщений не провоцирующая образования бесконечных ответвлений.
-
-* Система тегов, заменяющая жесткую иерархию разделов, усовершенствованная с целью придания тегам и тегированным сообщениям большей упорядоченности.
+Для ознакомления с более подробными планами по созданию приложения обращайтесь в wiki-раздел данного
+проекта на github (https://github.com/lerayne/UltiComm/wiki)
 
 
 Used resources:
