--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Описание на русском ниже :)
 
+== EN ==
+
 UltiComm (Ultimate Communication) also shortened to UC (pronounced as You-See) is an ambitious
 project of an online communications engine with a goal to kick out the obsolete forums technologies
 which still tend to reload the page every now-and-then and act like a page in the interface meaning.
@@ -7,19 +9,20 @@ which still tend to reload the page every now-and-then and act like a page in th
 As an opposite to forums, UC will be a real web-app that doing the same task (discussions on
 specific topics) and perhaps a little more.
 
+== RU ==
 
 UltiComm (Ultimate Communication, также UC, произносящееся как You See) - рабочее название нового
 веб-приложения для общения в интернете, ключевыми особенностями которого должны стать:
 
 * Организация интерфейса, свойственная десктопным приложениям.
 * Автоматическое обновление без лишних действий со стороны пользователя.
-* Система ветвления сообщений не провоцирующая образования бесконечных ответвлений.
+* Система ветвления сообщений не провоцирующая образования бесконечных ответвлений (под вопросом)
 * Система тегов, заменяющая жесткую иерархию разделов, усовершенствованная с целью придания тегам и
   тегированным сообщениям большей упорядоченности.
 
-Ключевой особенностью UC должен стать его интерфейс, легкий в обращении, полностью основанный на
-AJAX и являющийся полноценным веб-приложением. В то же время, мы не будем отягощать программу излишними
-украшениями и громоздкими библиотеками, чтобы избежать подтормаживаний настолько, насколько это возможно.
+Ключевой особенностью UC должен стать его интерфейс, легкий в обращения и являющийся полноценным 
+веб-приложением. В то же время, мы не будем отягощать программу излишними украшениями и громоздкими 
+библиотеками, чтобы избежать подтормаживаний настолько, насколько это возможно.
 
 Программа пишется как замена в первую очередь форумам, то есть ресурсам для конструктивного
 тематического общения. На данный момент большинство форумов все еще остаются наборами "страниц со
@@ -39,3 +42,4 @@ Used resources:
 DbSimple by Dmitry Koterov, http://forum.dklab.ru/users/DmitryKoterov/
 JsHttpRequest by Dmitry Koterov, http://en.dklab.ru/lib/JsHttpRequest/
 Silk Icons by Mark James http://www.famfamfam.com/lab/icons/silk/
+nicEdit WYSIWIG http://nicedit.com/
