--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@ DONE:
 
 TODO:
 
+== Водить теги! Блин, скок можно увиливать от тегов уже?
 == Исправить систему перехвата действий (например при редактировании названия темы) ЧТО Я ИМЕЛ В ВИДУ???
 
 
