Добавил ресурс jQuery в ридми

--- a/README
+++ b/README
@@ -42,3 +42,4 @@ DbSimple by Dmitry Koterov, http://forum.dklab.ru/users/DmitryKoterov/
 JsHttpRequest by Dmitry Koterov, http://en.dklab.ru/lib/JsHttpRequest/
 Silk Icons by Mark James http://www.famfamfam.com/lab/icons/silk/
 nicEdit WYSIWIG http://nicedit.com/
+jQuery http://jquery.com
