--- a/README
+++ b/README
@@ -1,4 +1,14 @@
-Описание на русском ниже :) 
+Для разработчиков:
+
+Файловая стурктура репозитория является работоспособной инсталляцией, но не является дистрибутивом для распространения.
+Софт для сборки проекта для пользователя будет выбран позже, пока что проект использует bower для подключения сторонних
+библиотек и менеджмента зависимостей.
+
+Чтобы клиент заработал, после клонирования нужно выполнить команду bower update в папке с проектом. Естественно, для этого
+у вас должны быть установлены bower и npm.
+
+
+Описание на русском ниже :)
 
 == EN ==
 
@@ -13,9 +23,7 @@ specific topics) and perhaps a little more.
 
 Tinng - новое веб-приложение для общения в интернете, ключевыми особенностями которого должны стать:
 
-* Организация интерфейса, свойственная десктопным приложениям.
 * Автоматическое обновление без лишних действий со стороны пользователя.
-* Система ветвления сообщений не провоцирующая образования бесконечных ответвлений (под вопросом)
 * Система тегов, заменяющая жесткую иерархию разделов, усовершенствованная с целью придания тегам и
   тегированным сообщениям большей упорядоченности.
 
@@ -34,12 +42,3 @@ Tinng - новое веб-приложение для общения в инте
 
 Для ознакомления с более подробными планами по созданию приложения обращайтесь в wiki-раздел данного
 проекта на github (https://github.com/lerayne/UltiComm/wiki)
-
-
-Used resources:
-
-DbSimple by Dmitry Koterov, http://forum.dklab.ru/users/DmitryKoterov/
-JsHttpRequest by Dmitry Koterov, http://en.dklab.ru/lib/JsHttpRequest/
-Silk Icons by Mark James http://www.famfamfam.com/lab/icons/silk/
-nicEdit WYSIWIG http://nicedit.com/
-jQuery http://jquery.com
